--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,23 +1,10 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  logo: "E-learning System "
+  pass_confirm: "Confirmation"
+  account_submit: "Create my account"
+  signup_title: "Sign up"
+  home_title: "Welcome to E-learning System"
+  signup_button: "Sign up now!"
+  signin_success_mess: "Đăng nhập thành công"
+  home_link: "Home"
+  help_link: "Help"
