--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,6 +5,14 @@ en:
   signup_title: "Sign up"
   home_title: "Welcome to E-learning System"
   signup_button: "Sign up now!"
-  signin_success_mess: "Đăng nhập thành công"
+  signup_success_mess: "Sign up successfully! "
   home_link: "Home"
   help_link: "Help"
+  login_title: "Log in"
+  login_failed_mess: "Invalid email/password combination"
+  users_link: "Users"
+  profile: "Profile"
+  setting: "Setting"
+  logout: "Log out"
+  account: "Account"
+  new_user: "New user?"
