--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,6 +8,8 @@ en:
   signup_success_mess: "Sign up successfully! "
   home_link: "Home"
   help_link: "Help"
+  edit_title: "Edit user"
+  save_submit: "Save changes"
   login_title: "Log in"
   login_failed_mess: "Invalid email/password combination"
   users_link: "Users"
@@ -16,3 +18,5 @@ en:
   logout: "Log out"
   account: "Account"
   new_user: "New user?"
+  profile_update: "Profile updated"
+  login_warning: "Please log in."
