show word list and word of category

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,4 +23,7 @@ en:
   follow: "Follow"
   unfollow: "Unfollow"
   followings: "Following"
-  followers: "Followers"
+  followers: "Followers" 
+  start_lesson: "Start Lesson"
+  word_list: "Word List"
+ 
