add action for worlist

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,9 @@ en:
   delete: "delete"
   set_admmin: "SetAdmin"
   danger: "Something went wrong!"
+  category_label: "Category:"
+  learned_label: "Learned"
+  notlearned_label: "Not Learned"
+  all_label: "All"
+  filter_button: "Filter"
+  pdf_button: "PDF"
